--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Hablu Vaiya</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni dolorum enim, nesciunt iusto aliquam perferendis odit sunt facere libero delectus.</p>
 </body>
 </html>
