--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hablu Vaiya</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni dolorum enim, nesciunt iusto aliquam perferendis odit sunt facere libero delectus.</p>
-    <p> Hablu Vaiya </p>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime voluptatem dicta numquam accusantium sit nesciunt, fugit quae eaque tenetur molestias optio totam obcaecati eos iure consectetur quidem id fuga at sunt quo esse voluptate illum. Sit similique veritatis esse velit rem autem, sint laborum non quas, ad consequuntur repudiandae repellat.</p>
 </body>
 </html>
